--- a/1_basics.ipynb
+++ b/1_basics.ipynb
@@ -1,111 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#Heading level 1\n",
-    "This is how you write in bullets using astericks:\n",
-    "* Bullet 1 of Markdown\n",
-    "* Bullet 2 of Markdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "st python in jupyter\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"st python in jupyter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str1 = \"st R tutorial\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str1 = str1.replace(\"R\", \"python\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'st python tutorial'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'t'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str1[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'l'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str1[-1]"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -113,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "'python'"
+       "5"
       ]
      },
      "execution_count": 21,
@@ -122,233 +17,424 @@
     }
    ],
    "source": [
-    "str1[3:9]  # str1[9:3] does not return anything"
+    "x=5\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'tutorial'"
+       "3"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str1[10:]"
+    "y=3\n",
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'st python'"
+       "1.667"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str1[:-9]"
+    "z=round(x/y, 3)\n",
+    "z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[int, float]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[type(x), type(z)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' tutorial'"
+       "[8, 2, 15, 125, 2]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str1[-9:]"
+    "[x+y, x-y, x*y, x**y, x%y]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'tutor'"
+       "'string variable in python'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "str1[-8:-3]  # str1[-3:-8] does not return anything"
+    "string=\"string variable in python\"\n",
+    "string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['python language', '15', '15.6']"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[string, string_int, string_float]=[\"python language\", \"15\", \"15.6\"]\n",
+    "[string, string_int, string_float]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[15, 15.6, 15]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[int(string_int), float(string_float), int(float(string_float))]\n",
+    "\n",
+    "# notice how string_float is converted to float first then converted into int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'01234567654321'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string=\"01234567654321\"\n",
+    "string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0', '1', '012', '4', '567654321', '4', '01234567654', '321', '54']"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[string[0], string[-1], string[:3], string[4], string[5:], string[-4], string[:-3], string[-3:], string[-5:-3]]\n",
+    "\n",
+    "# note specially the following\n",
+    "# :3 (viz actually 0,1,2);\n",
+    "# :-3 (viz actually 0,1,2,...,-4);\n",
+    "# -3: (viz actually -3,-2,-1);\n",
+    "# -5:-3 (viz actually -5,-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "x = \"This is\"\n",
-    "y = 2"
+    "[string_a, string_b, string_c]=[\"stitch\", \"string variables\", \"python\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is how you use 2 string variables in print\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"{} how you use {} string variables in print\".format(x, y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 12, 14, 16, 18]"
+       "'This is how you can stitch more than one string variables in python'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l = list(range(10,20,2))\n",
-    "l"
+    "string_z=\"This is how you can {} more than one {} in {}\".format(string_a, string_b, string_c)\n",
+    "string_z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 12, 14, 16, 18, 50]"
+       "'This is how you can stitch more than one text variables in python'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.append(50)\n",
-    "l"
+    "string_replacement=string_z.replace(\"string\", \"text\")\n",
+    "string_replacement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 10, 12, 14, 16, 18, 50]"
+       "[True, False]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.insert(0, 5)\n",
-    "l"
+    "[\"python\" in string_replacement, \"string\" in string_replacement]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 10, 12, 14, 16, 18]"
+       "[0, 5, 10, 15, 20, 25, 30, 35, 40, 45]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l.remove(50) # to remove a value\n",
+    "l = list(range(0,50,5))\n",
     "l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10, 12, 14, 16, 18]"
+       "[-100, 0, 5, 10, 15, 20, 25, 30, 111, 35, 40, 45, 5000]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "del l[0] # to delete an entry\n",
+    "[l.insert(7, 111), l.insert(0, -100), l.append(5000)]\n",
     "l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[18, 16, 14, 12, 10]"
+       "[0, 5, 10, 15, 20, 25, 30, 111, 35, 40, 45, 5000]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del l[0] # to delete a value index wise\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 5, 10, 15, 20, 25, 30, 111, 35, 40, 45]"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.remove(5000) # to remove a value by specifying\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 111]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.sort()\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[111, 45, 40, 35, 30, 25, 20, 15, 10, 5, 0]"
+      ]
+     },
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,6 +443,13 @@
     "l.sort(reverse=True)\n",
     "l"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -464,6 +557,23 @@
    ],
    "source": [
     "dc[100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Heading level 1\n",
+    "This is how you write in bullets using astericks:\n",
+    "* Bullet 1 of Markdown\n",
+    "* Bullet 2 of Markdown"
    ]
   },
   {
@@ -2081,7 +2191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2095,7 +2205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
